--- a/MediaBrowser.Server.Implementations/Localization/JavaScript/javascript.json
+++ b/MediaBrowser.Server.Implementations/Localization/JavaScript/javascript.json
@@ -728,5 +728,6 @@
     "SyncJobItemStatusFailed": "Failed",
     "SyncJobItemStatusRemovedFromDevice": "Removed from device",
     "SyncJobItemStatusCancelled": "Cancelled",
-    "MessageJobItemHasNoActions": "d"
+    "MessageBlockContentWithThisTag": "Block all content with this tag",
+    "MessageAllowContentWithThisTag":  "Allow only content with this tag"
 }
