--- a/MediaBrowser.Server.Implementations/Localization/Server/server.json
+++ b/MediaBrowser.Server.Implementations/Localization/Server/server.json
@@ -63,7 +63,7 @@
     "LabelSyncTempPath": "Temporary file path:",
     "LabelSyncTempPathHelp": "Specify a custom sync working folder. Converted media created during the sync process will be stored here.",
     "LabelCustomCertificatePath": "Custom certificate path:",
-    "LabelCustomCertificatePathHelp": "Supply your own ssl certificate. If omitted, the server will create a self-signed certificate.",
+    "LabelCustomCertificatePathHelp": "Supply your own ssl certificate .pfx file. If omitted, the server will create a self-signed certificate.",
     "TitleNotifications": "Notifications",
     "ButtonDonateWithPayPal": "Donate with PayPal",
     "OptionDetectArchiveFilesAsMedia": "Detect archive files as media",
@@ -494,8 +494,6 @@
     "OptionEnableDebugTranscodingLogging": "Enable debug transcoding logging",
     "OptionEnableDebugTranscodingLoggingHelp": "This will create very large log files and is only recommended as needed for troubleshooting purposes.",
     "OptionEnableDebugTranscodingLogging": "Enable debug transcoding logging",
-    "OptionUpscaling": "Allow clients to request upscaled video",
-    "OptionUpscalingHelp": "In some cases this will result in improved video quality but will increase CPU usage.",
     "EditCollectionItemsHelp": "Add or remove any movies, series, albums, books or games you wish to group within this collection.",
     "HeaderAddTitles": "Add Titles",
     "LabelEnableDlnaPlayTo": "Enable DLNA Play To",
@@ -1357,7 +1355,6 @@
     "HeaderYears": "Years",
     "HeaderAddTag": "Add Tag",
     "LabelBlockContentWithTags": "Block content with tags:",
-    "LabelAllowContentWithTags": "Allow only content with tags:",
     "LabelTag": "Tag:",
     "LabelEnableSingleImageInDidlLimit": "Limit to single embedded image",
     "LabelEnableSingleImageInDidlLimitHelp": "Some devices will not render properly if multiple images are embedded within Didl.",
