--- a/MediaBrowser.Server.Implementations/Localization/JavaScript/nl.json
+++ b/MediaBrowser.Server.Implementations/Localization/JavaScript/nl.json
@@ -14,12 +14,12 @@
     "FileReadError": "Er is een fout opgetreden bij het lezen van het bestand.",
     "DeleteUser": "Verwijder gebruiker",
     "DeleteUserConfirmation": "Weet u zeker dat u deze gebruiker wilt verwijderen?",
-    "PasswordResetHeader": "Reset Password",
+    "PasswordResetHeader": "Reset Wachtwoord",
     "PasswordResetComplete": "Het wachtwoord is opnieuw ingesteld.",
-    "PinCodeResetComplete": "The pin code has been reset.",
+    "PinCodeResetComplete": "De pincode is gereset.",
     "PasswordResetConfirmation": "Weet u zeker dat u het wachtwoord opnieuw in wilt stellen?",
-    "PinCodeResetConfirmation": "Are you sure you wish to reset the pin code?",
-    "HeaderPinCodeReset": "Reset Pin Code",
+    "PinCodeResetConfirmation": "Weet u zeker dat u de pincode wilt resetten?",
+    "HeaderPinCodeReset": "Reset Pincode",
     "PasswordSaved": "Wachtwoord opgeslagen.",
     "PasswordMatchError": "Wachtwoord en wachtwoord bevestiging moeten hetzelfde zijn.",
     "OptionRelease": "Offici\u00eble Release",
@@ -50,19 +50,19 @@
     "ButtonSave": "Opslaan",
     "ButtonDownload": "Download",
     "SyncJobStatusQueued": "Queued",
-    "SyncJobStatusConverting": "Converting",
-    "SyncJobStatusFailed": "Failed",
-    "SyncJobStatusCancelled": "Cancelled",
-    "SyncJobStatusCompleted": "Synced",
-    "SyncJobStatusReadyToTransfer": "Ready to Transfer",
-    "SyncJobStatusTransferring": "Transferring",
+    "SyncJobStatusConverting": "Converteren",
+    "SyncJobStatusFailed": "Mislukt",
+    "SyncJobStatusCancelled": "Afgebroken",
+    "SyncJobStatusCompleted": "Gesynced",
+    "SyncJobStatusReadyToTransfer": "Klaar om te Verzenden",
+    "SyncJobStatusTransferring": "Verzenden",
     "SyncJobStatusCompletedWithError": "Synced with errors",
-    "SyncJobItemStatusReadyToTransfer": "Ready to Transfer",
-    "LabelCollection": "Verzameling",
-    "HeaderAddToCollection": "Toevoegen aan verzameling",
+    "SyncJobItemStatusReadyToTransfer": "Klaar om te Verzenden",
+    "LabelCollection": "Collectie",
+    "HeaderAddToCollection": "Toevoegen aan Collectie",
     "NewCollectionNameExample": "Voorbeeld: Star Wars Collectie",
     "OptionSearchForInternetMetadata": "Zoeken op het internet voor afbeeldingen en metadata",
-    "LabelSelectCollection": "Selecteer verzameling:",
+    "LabelSelectCollection": "Selecteer collectie:",
     "HeaderDevices": "Apparaten",
     "ButtonScheduledTasks": "Geplande taken",
     "MessageItemsAdded": "Items toegevoegd",
@@ -95,9 +95,9 @@
     "LabelFree": "Gratis",
     "HeaderSelectAudio": "Selecteer Audio",
     "HeaderSelectSubtitles": "Selecteer Ondertitels",
-    "ButtonMarkForRemoval": "Remove from device",
-    "ButtonUnmarkForRemoval": "Cancel removal from device",
-    "LabelSyncQualityHelp": "Use high quality for the maximum supported quality by the device. Medium and low quality will reduce the allowed bitrate.",
+    "ButtonMarkForRemoval": "Van apparaat verwijderen",
+    "ButtonUnmarkForRemoval": "Afbreken verwijderen van apparaat",
+    "LabelSyncQualityHelp": "Use high quality for the maximum supported quality by the device. Medium and low quality will reduce the allowed bitrate. Original will sync the original file, regardless of whether the device is capable of playing it or not.",
     "LabelDefaultStream": "(Standaard)",
     "LabelForcedStream": "(Geforceerd)",
     "LabelDefaultForcedStream": "(Standaard \/ Georceerd)",
@@ -273,7 +273,7 @@
     "ButtonStart": "Start",
     "HeaderChannels": "Kanalen",
     "HeaderMediaFolders": "Media Mappen",
-    "HeaderBlockItemsWithNoRating": "Blokkeren van onderdelen zonder classificatiegegevens:",
+    "HeaderBlockItemsWithNoRating": "Blokkeer inhoud zonder classificatiegegevens:",
     "OptionBlockOthers": "Overigen",
     "OptionBlockTvShows": "TV Series",
     "OptionBlockTrailers": "Trailers",
@@ -410,7 +410,7 @@
     "HeaderTrack": "Track",
     "HeaderDisc": "Schijf",
     "OptionMovies": "Films",
-    "OptionCollections": "Verzamelingen",
+    "OptionCollections": "Collecties",
     "OptionSeries": "Series",
     "OptionSeasons": "Seizoenen",
     "OptionEpisodes": "Afleveringen",
@@ -637,7 +637,7 @@
     "WebClientTourTapHold": "Klik en houd vast of rechtsklik op elke poster voor een context menu",
     "WebClientTourMetadataManager": "Klik wijzigen om de metadata manager te openen",
     "WebClientTourPlaylists": "Maak eenvoudig een afspeellijst en mixlijst, en speel deze op elk apparaat",
-    "WebClientTourCollections": "Maak film verzamelingen door films samen te voegen",
+    "WebClientTourCollections": "Maak film Collecties door boxsets samen te voegen",
     "WebClientTourUserPreferences1": "Gebruikersvoorkeuren stellen u in staat de manier waarop de bibliotheek aan gebruikers getoond wordt aan te passen",
     "WebClientTourUserPreferences2": "Configureer uw geluids- en ondertitelingsinstellingen eenmalig voor elke Media Browser app",
     "WebClientTourUserPreferences3": "Ontwerp de startpagina van de web client volgens uw wensen",
@@ -684,7 +684,7 @@
     "MessageForgotPasswordFileCreated": "Het volgende bestand met instructies hoe nu verder te gaan is gemaakt:",
     "MessageForgotPasswordFileExpiration": "De hertsel pincode verloopt {0}.",
     "MessageInvalidForgotPasswordPin": "Er is een ongeldige of verlopen pincode ingegeven. Probeer opnieuw.",
-    "MessagePasswordResetForUsers": "Passwords have been removed for the following users:",
+    "MessagePasswordResetForUsers": "Wachtwoorden zijn verwijderd van de volgende gebruikers:",
     "HeaderInviteGuest": "Nodig gast uit",
     "ButtonLinkMyMediaBrowserAccount": "Koppel mijn account nu",
     "MessageConnectAccountRequiredToInviteGuest": "Om gasten uit te kunnen nodigen moet uw Media Browser account aan deze server gekoppeld worden.",
@@ -698,6 +698,7 @@
     "LabelSyncTo": "Synchroniseer naar:",
     "LabelSyncJobName": "Naam synchroniseer taak:",
     "LabelQuality": "Kwaliteit",
+    "OptionOriginal": "Original",
     "OptionHigh": "Hoog",
     "OptionMedium": "Gemiddeld",
     "OptionLow": "Laag",
@@ -717,6 +718,5 @@
     "SyncJobItemStatusSynced": "Gesynchroniseerd",
     "SyncJobItemStatusFailed": "Mislukt",
     "SyncJobItemStatusRemovedFromDevice": "Van apparaat verwijderd",
-    "SyncJobItemStatusCancelled": "Geannuleerd",
-    "MessageJobItemHasNoActions": "d"
+    "SyncJobItemStatusCancelled": "Geannuleerd"
 }
