--- a/MediaBrowser.Server.Implementations/Localization/JavaScript/es.json
+++ b/MediaBrowser.Server.Implementations/Localization/JavaScript/es.json
@@ -97,7 +97,7 @@
     "HeaderSelectSubtitles": "Seleccionar Subt\u00edtulos",
     "ButtonMarkForRemoval": "Remove from device",
     "ButtonUnmarkForRemoval": "Cancel removal from device",
-    "LabelSyncQualityHelp": "Use high quality for the maximum supported quality by the device. Medium and low quality will reduce the allowed bitrate.",
+    "LabelSyncQualityHelp": "Use high quality for the maximum supported quality by the device. Medium and low quality will reduce the allowed bitrate. Original will sync the original file, regardless of whether the device is capable of playing it or not.",
     "LabelDefaultStream": "(Por defecto)",
     "LabelForcedStream": "(Forzado)",
     "LabelDefaultForcedStream": "(Por defecto\/Forzado)",
@@ -273,7 +273,7 @@
     "ButtonStart": "Inicio",
     "HeaderChannels": "Canales",
     "HeaderMediaFolders": "Carpetas de medios",
-    "HeaderBlockItemsWithNoRating": "Bloquear elementos sin informaci\u00f3n de clasificaci\u00f3n:",
+    "HeaderBlockItemsWithNoRating": "Block content with no rating information:",
     "OptionBlockOthers": "Otros",
     "OptionBlockTvShows": "Tv Shows",
     "OptionBlockTrailers": "Trailers",
@@ -698,6 +698,7 @@
     "LabelSyncTo": "Sync to:",
     "LabelSyncJobName": "Sync job name:",
     "LabelQuality": "Quality:",
+    "OptionOriginal": "Original",
     "OptionHigh": "High",
     "OptionMedium": "Medium",
     "OptionLow": "Low",
@@ -717,6 +718,5 @@
     "SyncJobItemStatusSynced": "Synced",
     "SyncJobItemStatusFailed": "Failed",
     "SyncJobItemStatusRemovedFromDevice": "Removed from device",
-    "SyncJobItemStatusCancelled": "Cancelled",
-    "MessageJobItemHasNoActions": "d"
+    "SyncJobItemStatusCancelled": "Cancelled"
 }
