--- a/MediaBrowser.Server.Implementations/Localization/JavaScript/pt_BR.json
+++ b/MediaBrowser.Server.Implementations/Localization/JavaScript/pt_BR.json
@@ -97,7 +97,7 @@
     "HeaderSelectSubtitles": "Selecione Legendas",
     "ButtonMarkForRemoval": "Remover do dispositivo",
     "ButtonUnmarkForRemoval": "Cancelar remo\u00e7\u00e3o do dispositivo",
-    "LabelSyncQualityHelp": "Use alta qualidade para a qualidade m\u00e1xima suportada pelo dispositivo. Qualidades M\u00e9dia e Baixa reduzem a taxa permitida.",
+    "LabelSyncQualityHelp": "Use high quality for the maximum supported quality by the device. Medium and low quality will reduce the allowed bitrate. Original will sync the original file, regardless of whether the device is capable of playing it or not.",
     "LabelDefaultStream": "(Padr\u00e3o)",
     "LabelForcedStream": "(For\u00e7ada)",
     "LabelDefaultForcedStream": "(Padr\u00e3o\/For\u00e7ada)",
@@ -273,7 +273,7 @@
     "ButtonStart": "Iniciar",
     "HeaderChannels": "Canais",
     "HeaderMediaFolders": "Pastas de M\u00eddia",
-    "HeaderBlockItemsWithNoRating": "Bloquear itens sem informa\u00e7\u00e3o de classifica\u00e7\u00e3o:",
+    "HeaderBlockItemsWithNoRating": "Bloquear conte\u00fado sem informa\u00e7\u00e3o de classifica\u00e7\u00e3o:",
     "OptionBlockOthers": "Outros",
     "OptionBlockTvShows": "S\u00e9ries de TV",
     "OptionBlockTrailers": "Trailers",
@@ -698,6 +698,7 @@
     "LabelSyncTo": "Sincronizar para:",
     "LabelSyncJobName": "Nome da tarefa de sincroniza\u00e7\u00e3o:",
     "LabelQuality": "Qualidade:",
+    "OptionOriginal": "Original",
     "OptionHigh": "Alta",
     "OptionMedium": "M\u00e9dia",
     "OptionLow": "Baixa",
@@ -717,6 +718,5 @@
     "SyncJobItemStatusSynced": "Sincronizado",
     "SyncJobItemStatusFailed": "Falhou",
     "SyncJobItemStatusRemovedFromDevice": "Removido do dispositivo",
-    "SyncJobItemStatusCancelled": "Cancelado",
-    "MessageJobItemHasNoActions": "d"
+    "SyncJobItemStatusCancelled": "Cancelado"
 }
