--- a/MediaBrowser.Server.Implementations/Localization/JavaScript/zh_CN.json
+++ b/MediaBrowser.Server.Implementations/Localization/JavaScript/zh_CN.json
@@ -97,7 +97,7 @@
     "HeaderSelectSubtitles": "\u9009\u62e9\u5b57\u5e55",
     "ButtonMarkForRemoval": "Remove from device",
     "ButtonUnmarkForRemoval": "Cancel removal from device",
-    "LabelSyncQualityHelp": "Use high quality for the maximum supported quality by the device. Medium and low quality will reduce the allowed bitrate.",
+    "LabelSyncQualityHelp": "Use high quality for the maximum supported quality by the device. Medium and low quality will reduce the allowed bitrate. Original will sync the original file, regardless of whether the device is capable of playing it or not.",
     "LabelDefaultStream": "(\u9ed8\u8ba4)",
     "LabelForcedStream": "(\u5f3a\u5236)",
     "LabelDefaultForcedStream": "(\u9ed8\u8ba4\/\u5f3a\u5236)",
@@ -273,7 +273,7 @@
     "ButtonStart": "\u5f00\u59cb",
     "HeaderChannels": "\u9891\u9053",
     "HeaderMediaFolders": "\u5a92\u4f53\u6587\u4ef6\u5939",
-    "HeaderBlockItemsWithNoRating": "\u6ca1\u6709\u8bc4\u7ea7\u4fe1\u606f\u5757\u7684\u9879\u76ee\uff1a",
+    "HeaderBlockItemsWithNoRating": "Block content with no rating information:",
     "OptionBlockOthers": "\u5176\u4ed6",
     "OptionBlockTvShows": "\u7535\u89c6\u8282\u76ee",
     "OptionBlockTrailers": "\u9884\u544a\u7247",
@@ -698,6 +698,7 @@
     "LabelSyncTo": "Sync to:",
     "LabelSyncJobName": "Sync job name:",
     "LabelQuality": "Quality:",
+    "OptionOriginal": "Original",
     "OptionHigh": "High",
     "OptionMedium": "Medium",
     "OptionLow": "Low",
@@ -717,6 +718,5 @@
     "SyncJobItemStatusSynced": "Synced",
     "SyncJobItemStatusFailed": "Failed",
     "SyncJobItemStatusRemovedFromDevice": "Removed from device",
-    "SyncJobItemStatusCancelled": "Cancelled",
-    "MessageJobItemHasNoActions": "d"
+    "SyncJobItemStatusCancelled": "Cancelled"
 }
