--- a/MediaBrowser.Server.Implementations/Localization/JavaScript/javascript.json
+++ b/MediaBrowser.Server.Implementations/Localization/JavaScript/javascript.json
@@ -656,6 +656,7 @@
     "WebClientTourUserPreferences4": "Configure backdrops, theme songs and external players",
     "WebClientTourMobile1": "The web client works great on smartphones and tablets...",
     "WebClientTourMobile2": "and easily controls other devices and Media Browser apps",
+    "WebClientTourMySync": "Sync your personal media to your devices for offline viewing.",
     "MessageEnjoyYourStay": "Enjoy your stay",
     "DashboardTourDashboard": "The server dashboard allows you to monitor your server and your users. You'll always know who is doing what and where they are.",
     "DashboardTourHelp": "In-app help provides easy buttons to open wiki pages relating to the on-screen content.",
@@ -667,6 +668,7 @@
     "DashboardTourNotifications": "Automatically send notifications of server events to your mobile device, email and more.",
     "DashboardTourScheduledTasks": "Easily manage long running operations with scheduled tasks. Decide when they run, and how often.",
     "DashboardTourMobile": "The Media Browser dashboard works great on smartphones and tablets. Manage your server from the palm of your hand anytime, anywhere.",
+    "DashboardTourSync": "Sync your personal media to your devices for offline viewing.",
     "MessageRefreshQueued": "Refresh queued",
     "TabDevices": "Devices",
     "TabExtras": "Extras",
