--- a/MediaBrowser.Server.Implementations/Localization/JavaScript/de.json
+++ b/MediaBrowser.Server.Implementations/Localization/JavaScript/de.json
@@ -97,7 +97,7 @@
     "HeaderSelectSubtitles": "W\u00f6hle Untertitel",
     "ButtonMarkForRemoval": "Entferne von Ger\u00e4t",
     "ButtonUnmarkForRemoval": "Abbrechen von Entfernen von Ger\u00e4t",
-    "LabelSyncQualityHelp": "Use high quality for the maximum supported quality by the device. Medium and low quality will reduce the allowed bitrate. Original will sync the original file, regardless of whether the device is capable of playing it or not.",
+    "LabelSyncQualityHelp": "Verwenden Sie \"hohe Qualit\u00e4t\" um die maximale vom Ger\u00e4t unterst\u00fctze Qualit\u00e4t zu verwenden. Mittlere und niedrige Qualit\u00e4t wird die erlaubte Datenrate reduzieren. Original wird die original Datei synchronisieren, egal ob diese vom Ger\u00e4t abgespielt werden kann oder nicht.",
     "LabelDefaultStream": "(Default)",
     "LabelForcedStream": "(Erzwungen)",
     "LabelDefaultForcedStream": "(Standard\/Erzwungen)",
@@ -273,7 +273,7 @@
     "ButtonStart": "Start",
     "HeaderChannels": "Kan\u00e4le",
     "HeaderMediaFolders": "Medienverzeichnisse",
-    "HeaderBlockItemsWithNoRating": "Block content with no rating information:",
+    "HeaderBlockItemsWithNoRating": "Blockiere Inhalte ohne Altersfreigabe:",
     "OptionBlockOthers": "Andere",
     "OptionBlockTvShows": "TV Serien",
     "OptionBlockTrailers": "Trailer",
