--- a/MediaBrowser.Server.Implementations/Localization/JavaScript/es_MX.json
+++ b/MediaBrowser.Server.Implementations/Localization/JavaScript/es_MX.json
@@ -97,7 +97,7 @@
     "HeaderSelectSubtitles": "Seleccionar Subtitulos",
     "ButtonMarkForRemoval": "Remover de dispositivo",
     "ButtonUnmarkForRemoval": "Cancelar remover de dispositivo",
-    "LabelSyncQualityHelp": "Use high quality for the maximum supported quality by the device. Medium and low quality will reduce the allowed bitrate. Original will sync the original file, regardless of whether the device is capable of playing it or not.",
+    "LabelSyncQualityHelp": "Utilice alta calidad para la calidad m\u00e1xima soportada por el dispositivo. La calidad media y baja reducir\u00e1n la tasa de bits permitida. Original har\u00e1 sinc del archivo original, sin importar si el dispositivo es capaz de reproducirlo o no.",
     "LabelDefaultStream": "(Por defecto)",
     "LabelForcedStream": "(Forzado)",
     "LabelDefaultForcedStream": "(Por Defecto\/Forzado)",
@@ -273,7 +273,7 @@
     "ButtonStart": "Iniciar",
     "HeaderChannels": "Canales",
     "HeaderMediaFolders": "Carpetas de Medios",
-    "HeaderBlockItemsWithNoRating": "Block content with no rating information:",
+    "HeaderBlockItemsWithNoRating": "Bloquear contenido sin informaci\u00f3n de clasificaci\u00f3n:",
     "OptionBlockOthers": "Otros",
     "OptionBlockTvShows": "Programas de TV",
     "OptionBlockTrailers": "Avances",
@@ -396,7 +396,7 @@
     "HeaderVideo": "Video",
     "HeaderRuntime": "Duraci\u00f3n",
     "HeaderCommunityRating": "Calificaci\u00f3n de la comunidad",
-    "HeaderParentalRating": "Calificaci\u00f3n parental",
+    "HeaderParentalRating": "Clasificaci\u00f3n parental",
     "HeaderReleaseDate": "Fecha de estreno",
     "HeaderDateAdded": "Fecha de adici\u00f3n",
     "HeaderSeries": "Series",
@@ -629,7 +629,7 @@
     "MessageThankYouForYourReview": "Gracias por su rese\u00f1a.",
     "LabelYourRating": "Su calificaci\u00f3n:",
     "LabelFullReview": "Rese\u00f1a completa:",
-    "LabelShortRatingDescription": "Res\u00famen corto de clasificaci\u00f3n:",
+    "LabelShortRatingDescription": "Res\u00famen corto de calificaci\u00f3n:",
     "OptionIRecommendThisItem": "Yo recomiendo este \u00edtem",
     "WebClientTourContent": "Vea sus medios recientemente a\u00f1adidos, siguientes ep\u00ecsodios y m\u00e1s. Los c\u00edrculos verdes indican cuantos medios sin reproducir tiene.",
     "WebClientTourMovies": "Reproduzca pel\u00edculas, avances y m\u00e1s desde cualquier dispositivo con un navegador web.",
