--- a/MediaBrowser.Server.Implementations/Localization/JavaScript/nl.json
+++ b/MediaBrowser.Server.Implementations/Localization/JavaScript/nl.json
@@ -285,7 +285,7 @@
     "OptionBlockLiveTvChannels": "Live TV Kanalen",
     "OptionBlockChannelContent": "Internet kanaal Inhoud",
     "ButtonRevoke": "Herroepen",
-    "MessageConfirmRevokeApiKey": "Weet u zeker dat u deze api-sleutel intrekt? Verbinding van de toepassing met Media Browser zal abrupt worden be\u00ebindigd.",
+    "MessageConfirmRevokeApiKey": "Weet u zeker dat u deze Api sleutel intrekt? Verbinding van de toepassing met Media Browser zal abrupt worden verbroken.",
     "HeaderConfirmRevokeApiKey": "Intrekken Api Sleutel",
     "ValueContainer": "Container: {0}",
     "ValueAudioCodec": "Audio Codec: {0}",
@@ -633,7 +633,7 @@
     "OptionIRecommendThisItem": "Ik beveel dit item aan",
     "WebClientTourContent": "Bekijk de recent toegevoegde media, volgende afleveringen en meer. De groene cirkels tonen hoeveel niet afgespeelde items er zijn.",
     "WebClientTourMovies": "Bekijk films, trailers en meer op elk apparaat met een web browser.",
-    "WebClientTourMouseOver": "Hou de muis over elke poster voor snelle toegang tot belangrijke informatie",
+    "WebClientTourMouseOver": "Houd de muis over elke poster voor snelle toegang tot belangrijke informatie",
     "WebClientTourTapHold": "Klik en houd vast of rechtsklik op elke poster voor een context menu",
     "WebClientTourMetadataManager": "Klik wijzigen om de metadata manager te openen",
     "WebClientTourPlaylists": "Maak eenvoudig een afspeellijst en mixlijst, en speel deze op elk apparaat",
@@ -694,7 +694,7 @@
     "CancelSyncJobConfirmation": "Weet u zeker dat u deze synchronistatie taak wilt annuleren? ",
     "TabSync": "Synchronisatie",
     "MessagePleaseSelectDeviceToSyncTo": "Selecteer een apparaat om mee te synchroniseren.",
-    "MessageSyncJobCreated": "Synchroniseer taak gemaakt.",
+    "MessageSyncJobCreated": "Synchronisatie taak gemaakt.",
     "LabelSyncTo": "Synchroniseer naar:",
     "LabelSyncJobName": "Naam synchroniseer taak:",
     "LabelQuality": "Kwaliteit",
